@@ -953,9 +953,14 @@ _tny_camel_folder_set_iter (TnyCamelFolder *folder, CamelFolderInfo *iter)
 	return;
 }
 
+static void
+tny_camel_folder_get_folders (TnyFolderStoreIface *self, TnyListIface *list, TnyFolderStoreQuery *query)
+{
+	TNY_CAMEL_FOLDER_GET_CLASS (self)->get_folders_func (self, list, query);
+}
 
 static void 
-tny_camel_folder_get_folders (TnyFolderStoreIface *self, TnyListIface *list, TnyFolderStoreQuery *query)
+tny_camel_folder_get_folders_default (TnyFolderStoreIface *self, TnyListIface *list, TnyFolderStoreQuery *query)
 {
 	TnyCamelFolderPriv *priv = TNY_CAMEL_FOLDER_GET_PRIVATE (self);
 	TnyCamelStoreAccountPriv *apriv = TNY_CAMEL_STORE_ACCOUNT_GET_PRIVATE (priv->account);
@@ -1043,7 +1048,8 @@ tny_camel_folder_get_folders_async_thread (gpointer thr_user_data)
 {
 	GetFoldersInfo *info = (GetFoldersInfo*) thr_user_data;
     
-	tny_camel_folder_get_folders (info->self, info->list, info->query);
+	tny_folder_store_iface_get_folders (TNY_FOLDER_STORE_IFACE (info->self),
+		info->list, info->query);
     
 	if (info->query)
 		g_object_unref (G_OBJECT (info->query));
@@ -1077,6 +1083,12 @@ tny_camel_folder_get_folders_async_thread (gpointer thr_user_data)
 
 static void 
 tny_camel_folder_get_folders_async (TnyFolderStoreIface *self, TnyListIface *list, TnyGetFoldersCallback callback, TnyFolderStoreQuery *query, gpointer user_data)
+{
+    	TNY_CAMEL_FOLDER_GET_CLASS (self)->get_folders_async_func (self, list, callback, query, user_data);
+}
+
+static void 
+tny_camel_folder_get_folders_async_default (TnyFolderStoreIface *self, TnyListIface *list, TnyGetFoldersCallback callback, TnyFolderStoreQuery *query, gpointer user_data)
 {
 	GetFoldersInfo *info = g_new0 (GetFoldersInfo, 1);
 	GThread *thread;
@@ -1122,6 +1134,10 @@ tny_camel_folder_class_init (TnyCamelFolderClass *class)
 	parent_class = g_type_class_peek_parent (class);
 	object_class = (GObjectClass*) class;
 	object_class->finalize = tny_camel_folder_finalize;
+
+    	class->get_folders_async_func = tny_camel_folder_get_folders_async_default;
+	class->get_folders_func = tny_camel_folder_get_folders_default;
+    
 	g_type_class_add_private (object_class, sizeof (TnyCamelFolderPriv));
 
 	return;
